v2.4.x/site/en/userGuide/schema/analyzer/filter/decompounder-filter.md
---
id: decompounder-filter.md
title: Decompounder​ Filter
summary: The `decompounder` filter splits compound words into individual components based on a specified dictionary, making it easier to search for parts of compound terms. This filter is particularly useful for languages that frequently use compound words, such as German.​
---

# Decompounder​

The `decompounder` filter splits compound words into individual components based on a specified dictionary, making it easier to search for parts of compound terms. This filter is particularly useful for languages that frequently use compound words, such as German.​

## Configuration​

The `decompounder` filter is a custom filter in Milvus. To use it, specify `"type": "decompounder"` in the filter configuration, along with a `word_list` parameter that provides the dictionary of word components to recognize.​

```python
analyzer_params = {​
    "tokenizer": "standard",​
    "filter":[{​
        "type": "decompounder", # Specifies the filter type as decompounder​
        "word_list": ["dampf", "schiff", "fahrt", "brot", "backen", "automat"],​
    }],​
}​
```

The `decompounder` filter accepts the following configurable parameters.​

<table data-block-token="O4ZcdyoEToqP22xm5ELcYyIhnEh"><thead><tr><th data-block-token="MW4TdhfD2oe0KTx9qwGcP5XEnIh" colspan="1" rowspan="1"><p data-block-token="Y5tddmngjoAyd1xtaDzc7It5nRf">Parameter​</p>

</th><th data-block-token="Vk8Id7BMRoJMIkxN0YPc4lJgn2f" colspan="1" rowspan="1"><p data-block-token="D4v9dtQ53oCx6ExVKhxcPj1EnWg">Description​</p>

</th></tr></thead><tbody><tr><td data-block-token="CDQldJSkAonYPIxTkiWcWpqPnOd" colspan="1" rowspan="1"><p data-block-token="TX4ndGkwkogWybxIfZocILJOnbd"><code>word_list</code>​</p>

</td><td data-block-token="VrxtdsWnZon6oPxMmbQcCgclnUg" colspan="1" rowspan="1"><p data-block-token="BXP4dHimoocoozxbHAecJOA6nTe">A list of word components used to split compound terms. This dictionary determines how compound words are decomposed into individual terms.​</p>

</td></tr></tbody></table>

The `decompounder` filter operates on the terms generated by the tokenizer, so it must be used in combination with a tokenizer.

After defining `analyzer_params`, you can apply them to a `VARCHAR` field when defining a collection schema. This allows Milvus to process the text in that field using the specified analyzer for efficient tokenization and filtering. For details, refer to [Example use](analyzer-overview.md#Example-use).​

## Example output​

Here’s an example of how the `decompounder` filter processes text:​

**Original text**:​

```python
"dampfschifffahrt brotbackautomat"​
```

**Expected output** (with `word_list: ["dampf", "schiff", "fahrt", "brot", "backen", "automat"]`):​

```python
["dampf", "schiff", "fahrt", "brotbackautomat"]​
```